<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edTextToMp3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pitch"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edTextToMp3" />

    <SeekBar
        android:id="@+id/seekBarPitch"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:progress="50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPitch" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/Speed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarPitch" />

    <SeekBar
        android:id="@+id/seekBarSpeed"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:progress="50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSpeed" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvVoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/voice"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/seekBarSpeed" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnFemale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/female"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tvVoice"
        app:layout_constraintTop_toBottomOf="@id/seekBarSpeed" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnMale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/male"
        app:layout_constraintStart_toEndOf="@id/btnFemale"
        app:layout_constraintTop_toBottomOf="@id/seekBarSpeed" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/languages"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnFemale" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnVn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/vn"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tvLang"
        app:layout_constraintTop_toBottomOf="@id/btnFemale" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnEng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/eng"
        app:layout_constraintStart_toEndOf="@id/btnVn"
        app:layout_constraintTop_toBottomOf="@id/btnMale" />

<!--    <Spinner-->
<!--        android:id="@+id/spLang"-->
<!--        android:layout_margin="20dp"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintTop_toBottomOf="@id/tvLang"-->
<!--        />-->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/Say"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnVn" />



</androidx.constraintlayout.widget.ConstraintLayout>